# metis_ros

./: CMakeLists.txt  license.md  package.xml  readme.md
docs/: doxygen.config
docs/docs/html/: index.html
docs/docs/latex/: refman.tex
examples/Random_Examples/: Random_Example_1.txt
include/: NegativeSentiment.hpp  Parser.hpp  PositiveSentiment.hpp  Sentiment.hpp  lib.hpp
launch/: metis_ros.launch
scripts/: .voicetest.py.swp  find_person.py  test_light.ino  voice_ros.py  voicetest.py
src/: .NegativeSentiment.cpp.swp  .SentimentService.cpp.swp  .talker.cpp.swp  NegativeSentiment.cpp  Parser.cpp  PositiveSentiment.cpp  Sentiment.cpp  SentimentService.cpp  listener.cpp  main.cpp  negative_words.txt  talker.cpp
srv/: strings.srv
test/: CMakeLists.txt  main.cpp  talker_test.cpp  talker_test.launch  test.cpp
